--- a/index.css
+++ b/index.css
@@ -83,6 +83,30 @@ button { cursor: pointer; }
     font-size: clamp(3.2rem, 6vw ,6rem);
   }
 }
+/* animation */
+.lg-text {
+  transition: all .3s ease-in-out;
+}
+.lg-text::after {
+  transition: all .3s ease-in-out;
+}
+.lg-text:hover::after {
+  font-size: 12rem;
+}
+.split__text--lg:hover,
+.form__text--lg:hover,
+.family__text--lg:hover,
+.bmi__text--lg:hover {
+  translate: 1rem 0;
+}
+
+.form__text--lg:hover::after,
+.family__text--lg:hover::after {
+  font-size: 19.4rem;
+} 
+
+
+
 .btn--arrow {
   position: relative;
   display: inline-flex;
