--- a/pages/sub1/sub1.css
+++ b/pages/sub1/sub1.css
@@ -22,7 +22,8 @@ body {
     color: var(--fontWhite);
     font-weight: 700;
 }
-h3{
+
+h3 {
     text-transform: uppercase;
 }
 
@@ -99,19 +100,6 @@ h3{
     align-items: center;
 }
 
-/* .back-text {
-    position: absolute;
-    top: -6rem;
-    color: var(--bgBlack);
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: var(--pointColor);
-    opacity: 0.1;
-    font-size: 11.2rem;
-    font-weight: 700;
-    line-height: 11.2rem;
-    text-transform: uppercase;
-} */
-
 .back-text {
     position: absolute;
     top: -6rem;
@@ -125,16 +113,19 @@ h3{
     -webkit-text-fill-color: transparent;
     color: transparent;
 }
+
 .textarea__title {
     width: auto;
     height: auto;
     margin-left: 0;
 }
+
 .textarea__title h3 {
     position: absolute;
     top: 0;
     min-width: 53rem;
 }
+
 .textarea__title .back-text,
 .textarea__title .a11y-hidden {
     position: initial;
@@ -162,10 +153,12 @@ h3{
 }
 
 .contents-imgbox {
+
     max-width: 40%;
     height: 70rem;
     object-fit: cover;
     overflow: hidden;
+
 }
 
 .contents-img {
@@ -234,24 +227,16 @@ h3{
     padding: 1rem 1rem;
 }
 
+.dropdown-title:hover {
+    color: var(--pointColor);
+}
 
 .dropdown-title:hover .arrow {
     transform: rotate(225deg);
 }
 
 /* 세컨드 컨텐츠 */
-/* .second-back-text {
-    position: absolute;
-    top: 15rem;
-    color: var(--bgBlack);
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: var(--pointColor);
-    opacity: 0.1;
-    font-size: 11.2rem;
-    font-weight: 700;
-    line-height: 11.2rem;
-    text-transform: uppercase;
-} */
+
 .second-back-text {
     position: absolute;
     top: 15rem;
@@ -265,6 +250,7 @@ h3{
     -webkit-text-fill-color: transparent;
     color: transparent;
 }
+
 .second-contents__main {
     height: 55rem;
     display: flex;
@@ -312,7 +298,6 @@ h3{
     width: 50rem;
     min-width: 35rem;
     height: 40rem;
-    /* object-fit: cover; */
     flex-shrink: 0;
 }
 
@@ -326,6 +311,7 @@ h3{
     display: flex;
     align-items: center;
     flex-direction: column;
+    /* text-align: center; */
 }
 
 .second-contents__titlebox__main {
@@ -384,6 +370,12 @@ h3{
 .btn-arr:hover .btn-arr_sub img {
     transform: rotate(45deg);
     transition: all 0.5s;
+}
+
+.btn-arr:hover .second-contents__titlebox__arr {
+    color: var(--fontGrey);
+    transition: all 0.5s;
+
 }
 
 /* 써드 컨텐츠 */
@@ -486,6 +478,7 @@ h3{
     cursor: pointer;
     transform: rotate(45deg);
     transition: all .5s;
+
 }
 
 
@@ -524,6 +517,11 @@ h3{
 
     .textarea__title {
         font-size: 5rem;
+        margin-left: 0rem;
+    }
+
+    .second-contents__titlebox {
+        text-align: center;
     }
 
     .second-contents__title {
@@ -616,8 +614,9 @@ h3{
     }
 
     .main-contents-1 {
-        margin-top: 3rem;
+        margin-top: 20rem;
         font-size: 1.2rem;
+        line-height: 1.7;
     }
 
     .main-contents__text {
@@ -645,9 +644,12 @@ h3{
     }
 
     .second-contents__img {
+        overflow: hidden;
         max-width: 30rem;
         min-width: 30rem;
     }
+
+
 
     .second-contents__titlebox__main {
         text-align: center;
