sub1 이미지 접근성 수정

--- a/pages/sub1/sub1.css
+++ b/pages/sub1/sub1.css
@@ -554,6 +554,9 @@ h3 {
 
 
 @media all and (max-width: 800px) {
+    .textarea__title h3 {
+        min-width: 100%
+    }
 
     .main-contents {
         padding: 0 3.2rem;
